; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/isdn/hisax/extr_config.c_B_L2L1.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/isdn/hisax/extr_config.c_B_L2L1.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.hisax_b_if = type { i32 }
%struct.hisax_if = type { i32 (%struct.hisax_if*, i32, i8*)* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.hisax_b_if*, i32, i8*)* @B_L2L1 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @B_L2L1(%struct.hisax_b_if* %0, i32 %1, i8* %2) #0 {
  %4 = alloca %struct.hisax_b_if*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i8*, align 8
  %7 = alloca %struct.hisax_if*, align 8
  store %struct.hisax_b_if* %0, %struct.hisax_b_if** %4, align 8
  store i32 %1, i32* %5, align 4
  store i8* %2, i8** %6, align 8
  %8 = load %struct.hisax_b_if*, %struct.hisax_b_if** %4, align 8
  %9 = bitcast %struct.hisax_b_if* %8 to %struct.hisax_if*
  store %struct.hisax_if* %9, %struct.hisax_if** %7, align 8
  %10 = load %struct.hisax_if*, %struct.hisax_if** %7, align 8
  %11 = getelementptr inbounds %struct.hisax_if, %struct.hisax_if* %10, i32 0, i32 0
  %12 = load i32 (%struct.hisax_if*, i32, i8*)*, i32 (%struct.hisax_if*, i32, i8*)** %11, align 8
  %13 = load %struct.hisax_if*, %struct.hisax_if** %7, align 8
  %14 = load i32, i32* %5, align 4
  %15 = load i8*, i8** %6, align 8
  %16 = call i32 %12(%struct.hisax_if* %13, i32 %14, i8* %15)
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
